# gl-readbook-learning

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt
include/: Camera.hpp  OpenglWindow.hpp  Shader.hpp  vapp.h
include/GL3/: gl3w.h
lib/: vbm.cpp  vdds.cpp  vermilion.cpp
src/: OpenglWindow.cpp  Shader.cpp
src/01-triangles/: 01-triangles.cpp  test-triangles1.cpp  test_triangles2.cpp  test_triangles3.cpp  test_triangles4.cpp  test_triangles5.cpp  test_triangles6.cpp
src/10-fur/: 10-fur.cpp
src/11-doublewrite/: 11-doublewrite.cpp
src/11-oit/: 11-oit.cpp
src/11-overdrawcount/: 11-overdrawcount.cpp
src/12-particlesimulator/: 12-particlesimulator.cpp
src/learning.gl/: test_camera.cpp  test_camera_free.cpp  test_coordinate.cpp  test_fps_camera.cpp  test_imgui.cpp  test_light1.h  test_light2.cpp  test_lignt1.cpp  test_lignt3_in_view.cpp  test_material1.cpp  test_new_camera_free.cpp  test_texture.cpp  test_texture1.cpp  test_transform1.cpp
src/test_implot/: test_implot.cpp
